# neural-experiments

./: .gitignore  CMakeLists.txt
resources/shaders/basic/: fragment.shader  vertex.shader
resources/shaders/shadow-mapping/: fragment.shader  vertex.shader
resources/shaders/shadow-projection/: vertex.shader
src/: bitmap-app.cpp  bitmap-app.hpp  general-app.cpp  general-app.hpp  main.cpp
src/activators/: sigmoid.cpp  sigmoid.hpp
src/examples/: dot-separator.cpp  dot-separator.hpp  image-memorizer.cpp  image-memorizer.hpp
src/examples/evolution-simulator/: evolution-simulator.cpp  evolution-simulator.hpp  user-controller.hpp  world.cpp  world.hpp
src/examples/evolution-simulator/creatures/: creature-config.cpp  creature-config.hpp  creature-creating-context.cpp  creature-creating-context.hpp  creature-generator.cpp  creature-generator.hpp  creature-mutating-context.cpp  creature-mutator.cpp  (+6 more)
src/graphics/: camera.hpp  perspective_camera.hpp
src/graphics/gl/: gl-texture.hpp  shader.cpp  shader.hpp
src/graphics/scene-rendering/: geometry-object-config.hpp  geometry-pool.cpp  geometry-pool.hpp  material.cpp  material.hpp  scene-object-config.cpp  scene-object-handle.cpp  scene-renderer.cpp  scene-renderer.hpp  scene.cpp  scene.hpp  shape-generator.cpp  shape-generator.hpp  textured-framebuffer.hpp
src/perceptron/: layer.cpp  layer.hpp  neural-network-config.cpp  neural-network-config.hpp  neural-network.cpp  neural-network.hpp
src/utils/: packed-vec2.cpp  packed-vec2.hpp  packed-vec3.cpp  packed-vec3.hpp  packed-vec4.cpp  packed-vec4.hpp  vec3.hpp
(+18 files in other folders)
